--- a/bla-api/package.json
+++ b/bla-api/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "ts-node -r tsconfig-paths/register ./src/server/server.ts"
+    "start": "ts-node -r tsconfig-paths/register ./src/server/server.ts",
+    "test": "jest"
   },
   "keywords": [],
   "author": "nivritii",
@@ -23,8 +24,11 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.14",
+    "@types/jest": "^29.1.1",
     "@types/morgan": "^1.9.3",
     "@types/node": "^18.7.23",
+    "jest": "^29.1.2",
+    "ts-jest": "^29.0.3",
     "ts-node-dev": "^2.0.0",
     "tsconfig-paths": "^3.8.0"
   }
